syntax = "proto3";

package user;

option go_package = "/user";

message UserInfo{
  int32 id = 1;
  string name = 2;
}

message UserRequest{
  repeated UserInfo users = 1;
}

message UserResponse{
  repeated UserInfo users = 1;
}

service UserService{
  rpc GetUserByServerStream(UserRequest) returns (stream UserResponse);
  rpc GetUserByClientStream(stream UserRequest) returns (UserResponse);
  rpc GetUserByStream(stream UserRequest) returns (stream UserResponse);
}